--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,8 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation "android.arch.lifecycle:viewmodel:1.1.1"
 
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
+
     //Recyclerview
     implementation 'androidx.recyclerview:recyclerview:1.3.1-rc01'
     implementation 'androidx.cardview:cardview:1.0.0'
