--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         tools:targetApi="31">
 
         <activity android:name=".ui.single_movie_details.SingleMovie" />
-        <activity android:name=".ui.MainActivity"
+        <activity android:name=".ui.popular_movie.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
